2013-11-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/qtterminal/embed_example.h:
	Support for building qt terminal with either Qt4 or Qt5

	* src/plot2d.c src/plot3d.c:
	Allowed enhanced/noenhanced key word after individual plot titles.

	* src/eval.c src/parse.c docs/gnuplot.doc:
	Restore backwards-compatibility by continuing to accept deprecated
	function defined(FOO).  Remove help entry so that the deprecation
	is taken more seriously.

2013-11-09  Ethan A Merritt  <merritt@u.washington.edu>

	* src/qtterminal/qt_term.cpp (qt_set_color) term/gd.trm (PNG_set_color):
	Do not change line type just because a color request specifies a
	linetype color.
	Bugfix.

	* src/qtterminal/QtGnuplotScene.cpp (mouseReleaseEvent):
	Revert mouse click timing change of 27-Oct-2013 but add a check for
	valid timer status.  This greatly reduces the number of spurious events
	that are passed through to the main program.
	Bug #1300

2013-11-06  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c src/axis.h src/eval.c src/save.c src/set.c src/show.c:
	Replace axis_defaults[index].name with axis_name(index) everywhere.
	Currently this is a macro that expands to the same thing, but now
	it is ready to be replaced by something more complicated.

	* src/unset.c (unset_tics): Change the flag for unset all to -1.

	* src/set.c (set_range):  We already accept "set xrange [*:*] noextend"
	as a more intuitive alternative to "set auto xfix".  Now we also accept
	"set xrange [*:*] extend" to go back to the default behavior.

	* src/save.c (save_range): Due to a typo, the fix/nofix extend/noextend
	axis property was not written by the "save" command.

2013-10-29  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot3d.c (get_3ddata): Pass through Inf and NaN to image code when
	the pixel value is presented in column 4. The column 3 (z) case was
	already handled.

2013-10-27  Ethan A Merritt  <merritt@u.washington.edu>
